log/build_2025-06-12_18-17-41/tello_cv/stderr.log
  File "/root/tello_ros_ws/install/tello_cv/lib/python3.8/site-packages/tello_cv/circle_tracker_node.py", line 3
    from sensor_msgs/msg import Image
                    ^
SyntaxError: invalid syntax

